force-app/main/default/objects/Integration_Handler__mdt/Integration_Handler__mdt.object-meta.xml
<CustomObject>
    <description>This custom metadata type will be used to store the credential and other details  of third party system.</description>
    <label>Integration Handler</label>
    <pluralLabel>Integration Handlers</pluralLabel>
</CustomObject>