force-app/main/default/objects/Integration_Handler__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Active ?</label>
    <type>Checkbox</type>
</CustomField>