force-app/main/default/objects/Integration_Handler__mdt/fields/is_Static_Token__c.field-meta.xml
<CustomField>
    <fullName>is_Static_Token__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>if the Static Bearer token is Provided to you then Marke this as True and add the static token value</inlineHelpText>
    <label>is Static Token</label>
    <type>Checkbox</type>
</CustomField>