force-app/main/default/objects/Integration_Handler__mdt/fields/Static_Token_Value__c.field-meta.xml
<CustomField>
    <fullName>Static_Token_Value__c</fullName>
    <inlineHelpText>Bearer Token which will get user for authentication</inlineHelpText>
    <label>Static Token Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>