force-app/main/default/objects/Integration_Handler__mdt/fields/Token_Generation_URL__c.field-meta.xml
<CustomField>
    <fullName>Token_Generation_URL__c</fullName>
    <label>Token Generation URL</label>
    <type>Url</type>
</CustomField>