force-app/main/default/objects/Integration_Handler__mdt/fields/Token_Http_Method__c.field-meta.xml
<CustomField>
    <fullName>Token_Http_Method__c</fullName>
    <label>Token Http Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>POST</fullName>
                <default>true</default>
                <label>POST</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>