force-app/main/default/objects/Integration_Handler__mdt/fields/Token_Request_Body__c.field-meta.xml
<CustomField>
    <fullName>Token_Request_Body__c</fullName>
    <label>Token Request Body</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>