force-app/main/default/objects/Integration_Handler__mdt/validationRules/if_Token_provided.validationRule-meta.xml
<ValidationRule>
    <fullName>if_Token_provided</fullName>
    <active>true</active>
    <errorConditionFormula>AND(is_Static_Token__c  ,    OR(ISBLANK(Static_Token_Value__c),ISNULL(Static_Token_Value__c ))  )</errorConditionFormula>
    <errorDisplayField>Static_Token_Value__c</errorDisplayField>
    <errorMessage>Please add a Static token value to the</errorMessage>
</ValidationRule>